--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -9,13 +9,13 @@
         <label class="form-label" for="id_username">
             Имя пользователя
         </label>
-        <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" required id="id_username">
+        <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" value="{{ request.POST.username }}" placeholder="Имя пользователя" required id="id_username">
     </div>
     <div class="mb-3">
         <label class="form-label" for="id_password">
             Пароль
         </label>
-        <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="Пароль" required id="id_password">
+        <input type="password" name="password" autocomplete="current-password" class="form-control" value="{{ request.POST.password1 }}" placeholder="Пароль" required id="id_password">
     </div>
         <input class="btn btn-primary" type="submit" value="Войти">
     </form>
