--- a/task_manager/templates/update_user.html
+++ b/task_manager/templates/update_user.html
@@ -2,21 +2,20 @@
 
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Регистрация</h1>    
+    <h1 class="my-4">Изменение пользователя</h1>    
     <form method="post">
-        {% csrf_token %}
-        <input type="hidden">
+        <input type="hidden" name="csrfmiddlewaretoken" value="flqjDh6FDQom7XeiNKgmoVdh0USjMRLABULwkTMY6rO8kOztAIE2h2VnYNntPxKv">
         <div class="mb-3">
             <label class="form-label" for="id_first_name">Имя</label>
-            <input type="text" name="first_name" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
+            <input type="text" name="first_name" value="2323" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_last_name">Фамилия</label>
-            <input type="text" name="last_name" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
+            <input type="text" name="last_name" value="2323" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_username">Имя пользователя</label>
-            <input type="text" name="username" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
+            <input type="text" name="username" value="2323" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
             <div class="form-text">
                 Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_.
             </div>
@@ -37,7 +36,7 @@
                 Для подтверждения введите, пожалуйста, пароль ещё раз.
             </div>
         </div>
-        <input class="btn btn-primary" type="submit" value="Зарегистрировать">
+        <input class="btn btn-primary" type="submit" value="Изменить">
     </form>
 </div>
 {% endblock %}
