--- a/task_manager/templates/reg_users.html
+++ b/task_manager/templates/reg_users.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Регистрация</h1>    
-    <form method="post">
+    <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <input type="hidden">
         <div class="mb-3">
@@ -22,8 +22,8 @@
             </div>
         </div>
         <div class="mb-3">
-            <label class="form-label" for="id_password1">Пароль</label>
-            <input type="password" name="password1" autocomplete="new-password" class="form-control" placeholder="Пароль" required aria-describedby="id_password1_helptext" id="id_password1">
+            <label class="form-label" for="id_password">Пароль</label>
+            <input type="password" name="password" autocomplete="new-password" class="form-control" placeholder="Пароль" required aria-describedby="id_password_helptext" id="id_password">
             <div class="form-text">
                 <ul>
                     <li>Ваш пароль должен содержать как минимум 3 символа.</li>
