--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -9,30 +9,44 @@
     {% bootstrap_css %}
   </head>
   <body class="d-flex flex-column min-vh-100">
-    {% block nav %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
       <a class="navbar-brand" href="/">Менеджер задач</a>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/users/">Пользователи</a>
+            <a class="nav-link" href="{% url 'users' %}">Пользователи</a>
           </li>
-
+          {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="/login/">Вход</a>
+            <a class="nav-link" href="{% url 'statuses' %}">Статусы</a>
           </li>
-
           <li class="nav-item">
-            <a class="nav-link" href="/users/create/">Регистрация</a>
+            <a class="nav-link" href="{% url 'labels' %}">Метки</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'tasks' %}">Задачи</a>
+          </li>
+          {% endif %}
+
+        {% if user.is_authenticated %}
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <input class="btn nav-link" type="submit" value="Выход">
+        </form>
+        {% else %}
+        <div class="d-flex">
+          <a class="nav-link" href="{% url 'login' %}">Вход</a>
+          <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+        </div>
+        {% endif %}
         </ul>
     </div>
     </nav>
-    {% endblock %}
-
+    
     {% block content %}
     {% endblock %}
 
