--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Вход</h1>
-    <form method="post">
-        <input type="hidden" name="csrfmiddlewaretoken" value="FakcaMxxSlzjK1Nu0rbmQHJcdRT60UjC1JFpRodQlWZ5XS8FNpz2JOribKog3Aix">
+    <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
     <div class="mb-3">
         <label class="form-label" for="id_username">
             Имя пользователя
