--- a/task_manager/templates/delete_user.html
+++ b/task_manager/templates/delete_user.html
@@ -1,14 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<div class="container wrapper flex-grow-1">
     <h1 class="my-4">Удаление пользователя</h1>
-    <p>Вы уверены, что хотите удалить 2323 2323?</p>
+    <p>Вы уверены, что хотите удалить {{ user.get_full_name }}?</p>
     <form method="post">
-        <input type="hidden" name="csrfmiddlewaretoken" value="8Zog1PfHF81NMygrhiQEGayIEfS9wInQ70GKVmI3mawTsOeZ3OYN7ZolljQkyKxq">
+        {% csrf_token %}
+        <input type="hidden">
         <input class="btn btn-danger" type="submit" value="Да, удалить">
     </form>
-</div>
 
 {% endblock %}
