--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -22,13 +22,13 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'statuses' %}">Статусы</a>
+            <a class="nav-link" href="{% url 'list_statuses' %}">Статусы</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'labels' %}">Метки</a>
+            <a class="nav-link" href="{% url 'list_labels' %}">Метки</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'tasks' %}">Задачи</a>
+            <a class="nav-link" href="{% url 'list_tasks' %}">Задачи</a>
           </li>
           {% endif %}
 
