--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+<!-- {% load django_bootstrap5 %} -->
+{% load django_bootstrap5 i18n %}
 
 {% block content %}
-    <h1 class="my-4">Вход</h1>
+    <!-- <h1 class="my-4">Вход</h1>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
     <div class="mb-3">
@@ -14,8 +16,22 @@
         <label class="form-label" for="id_password">
             Пароль
         </label>
-        <input type="password" name="password" autocomplete="current-password" class="form-control" value="{{ request.POST.password1 }}" placeholder="Пароль" required id="id_password">
+        <input type="password" name="password" autocomplete="current-password" class="form-control" value="{{ request.POST.password }}" placeholder="Пароль" required id="id_password">
     </div>
         <input class="btn btn-primary" type="submit" value="Войти">
-    </form>
+    </form> -->
+
+
+    <div class="container wrapper flex-grow-1">
+
+        <h1 class="my-3">{% translate 'Вход' %}</h1>
+        
+        <form action="{% url 'login' %}" method="post">
+            {% csrf_token %}
+            {% bootstrap_form_errors form %}
+            {% bootstrap_form form %}
+            {% translate 'Войти' as button_name %}
+            {% bootstrap_button button_type="submit" content=button_name %}
+        </form>
+        </div>
 {% endblock %}
