--- a/task_manager/templates/update_user.html
+++ b/task_manager/templates/update_user.html
@@ -1,40 +1,12 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 
 {% block content %}
     <h1 class="my-4">Изменение пользователя</h1>    
     <form method="post">
-        <input type="hidden" name="csrfmiddlewaretoken" value="flqjDh6FDQom7XeiNKgmoVdh0USjMRLABULwkTMY6rO8kOztAIE2h2VnYNntPxKv">
-        <div class="mb-3">
-            <label class="form-label" for="id_first_name">Имя</label>
-            <input type="text" name="first_name" value="2323" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="id_last_name">Фамилия</label>
-            <input type="text" name="last_name" value="2323" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="id_username">Имя пользователя</label>
-            <input type="text" name="username" value="2323" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
-            <div class="form-text">
-                Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_.
-            </div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="id_password1">Пароль</label>
-            <input type="password" name="password1" autocomplete="new-password" class="form-control" placeholder="Пароль" required aria-describedby="id_password1_helptext" id="id_password1">
-            <div class="form-text">
-                <ul>
-                    <li>Ваш пароль должен содержать как минимум 3 символа.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="id_password2">Подтверждение пароля</label>
-            <input type="password" name="password2" autocomplete="new-password" class="form-control" placeholder="Подтверждение пароля" required aria-describedby="id_password2_helptext" id="id_password2">
-            <div class="form-text">
-                Для подтверждения введите, пожалуйста, пароль ещё раз.
-            </div>
-        </div>
+        {% csrf_token %}        
+        <input type="hidden">
+        {% bootstrap_form form %}
         <input class="btn btn-primary" type="submit" value="Изменить">
     </form>
 {% endblock %}
