--- a/task_manager/templates/create_label.html
+++ b/task_manager/templates/create_label.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="my-4">Создать статус </h1>    
-    <form action="{% url 'create_status' %}" method="post">
+    <h1 class="my-4">Создать метку</h1>    
+    <form action="{% url 'create_label' %}" method="post">
         {% csrf_token %}
         <input type="hidden">
         <div class="mb-3">
