--- a/task_manager/templates/update_label.html
+++ b/task_manager/templates/update_label.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-    <h1 class="my-4">Изменение статуса</h1>    
+    <h1 class="my-4">Изменение метки</h1>    
     <form method="post">
         {% csrf_token %}        
         <input type="hidden">
