+ backup before locale

--- a/task_manager/templates/list_tasks.html
+++ b/task_manager/templates/list_tasks.html
@@ -18,7 +18,7 @@
 <div class="card-body bg-light">
 <form class="form-inline center" method="get">
   {% bootstrap_form filter.form %}
-  <input class="btn btn-primary" type="submit" value="Показать">
+  <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
 </form>
 </div>
 </div>
