main functionality is complete

--- a/task_manager/templates/list_labels.html
+++ b/task_manager/templates/list_labels.html
@@ -16,7 +16,7 @@
 <tr>
   <th>ID</th>
   <th>{% translate "Name" %}</th>
-  <th>{% translate "Create data" %}</th>
+  <th>{% translate "Date of creation" %}</th>
   <th></th>
 </tr>
 </thead>
