--- a/task_manager/templates/list_tasks.html
+++ b/task_manager/templates/list_tasks.html
@@ -31,7 +31,7 @@
   <th>{% translate "Status" %}</th>
   <th>{% translate "Author" %}</th>
   <th>{% translate "Executor" %}</th>
-  <th>{% translate "Create data" %}</th>
+  <th>{% translate "Date of creation" %}</th>
   <th></th>
 </tr>
 </thead>
