--- a/task_manager/templates/list_users.html
+++ b/task_manager/templates/list_users.html
@@ -12,7 +12,7 @@
           <th>ID</th>
           <th>{% translate "User name" %}</th>
           <th>{% translate "Full name" %}</th>
-          <th>{% translate "Create data" %}</th>
+          <th>{% translate "Date of creation" %}</th>
           <th></th>
         </tr>
       </thead>
