--- a/task_manager/templates/page_task.html
+++ b/task_manager/templates/page_task.html
@@ -25,7 +25,7 @@
             <div class="col">{% translate 'Status' %}</div><div class="col">{{ task.status }}</div>
           </div>
           <div class="row p-1">
-            <div class="col">{% translate 'Data create' %}</div><div class="col">{{ task.created_at|date:"d.m.Y H:i" }}</div>
+            <div class="col">{% translate 'Date of creation' %}</div><div class="col">{{ task.created_at|date:"d.m.Y H:i" }}</div>
           </div>
           <div class="row p-1">
             <div class="col">
