--- a/task_manager/templates/update_user.html
+++ b/task_manager/templates/update_user.html
@@ -8,7 +8,44 @@
     <form method="post">
         {% csrf_token %}        
         <input type="hidden">
-        {% bootstrap_form form %}
+        <input type="hidden">
+        <div class="mb-3">
+            <label class="form-label" for="id_first_name">{% translate 'First name' %}</label>
+            <input type="text" name="first_name" maxlength="150" class="form-control" placeholder="{% translate 'First name' %}" required id="id_first_name" value="{{ user.first_name }}">
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="id_last_name">{% translate 'Last name' %}</label>
+            <input type="text" name="last_name" maxlength="150" class="form-control" placeholder="{% translate 'Last name' %}" required id="id_last_name" value="{{ user.last_name }}">
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="id_username">{% translate 'User name' %}</label>
+            <input type="text" name="username" maxlength="150" autofocus class="form-control" placeholder="{% translate 'User name' %}" required aria-describedby="id_username_helptext" id="id_username" value="{{ user.username }}">
+            <div class="form-text">
+                {% translate 'Required field. No more than 150 characters. Only letters, numbers and symbols @/./+/-/_.' %}
+            </div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="id_password">{% translate 'Password' %}</label>
+            <input type="password" name="password" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password' %}" required aria-describedby="id_password_helptext" id="id_password">
+            <div class="form-text">
+                <ul>
+                    <li>{% translate 'Your password must contain at least 3 characters.' %}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="id_password2">{% translate 'Password Confirmation' %}</label>
+            {% if err %}
+                <input type="password" name="password2" autocomplete="new-password" class="form-control is-invalid" placeholder="{% translate 'Password Confirmation' %}" aria-invalid="true" aria-describedby="id_password2_helptext" id="id_password2">
+                <div class="invalid-feedback">{{ err }}</div>
+            {% else %}
+                <input type="password" name="password2" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password Confirmation' %}" required aria-describedby="id_password2_helptext" id="id_password2">
+            {% endif %}
+
+            <div class="form-text">
+                {% translate 'Please enter the password again to confirm.' %}
+            </div>
+        </div>
         <input class="btn btn-primary" type="submit" value="{% translate 'Update' %}">
     </form>
 {% endblock %}
