--- a/task_manager/templates/create_user.html
+++ b/task_manager/templates/create_user.html
@@ -10,22 +10,32 @@
         <input type="hidden">
         <div class="mb-3">
             <label class="form-label" for="id_first_name">{% translate 'First name' %}</label>
-            <input type="text" name="first_name" maxlength="150" class="form-control" placeholder="{% translate 'First name' %}" required id="id_first_name">
+            <input type="text" name="first_name" maxlength="150" class="form-control" placeholder="{% translate 'First name' %}" required id="id_first_name" value="{{ form.cleaned_data.first_name }}">
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_last_name">{% translate 'Last name' %}</label>
-            <input type="text" name="last_name" maxlength="150" class="form-control" placeholder="{% translate 'Last name' %}" required id="id_last_name">
+            <input type="text" name="last_name" maxlength="150" class="form-control" placeholder="{% translate 'Last name' %}" required id="id_last_name" value="{{ form.cleaned_data.last_name }}">
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_username">{% translate 'User name' %}</label>
-            <input type="text" name="username" maxlength="150" autofocus class="form-control" placeholder="{% translate 'User name' %}" required aria-describedby="id_username_helptext" id="id_username">
+            {% if form.errors.username %}
+                <input type="text" name="username" class="form-control is-invalid" placeholder="{% translate 'User name' %}" required aria-invalid="true" aria-describedby="id_username_helptext" id="id_username" value="{{ username }}">
+                <div class="invalid-feedback">{{ form.errors.username.0 }}</div>
+            {% else %}
+                <input type="text" name="username" maxlength="150" autofocus class="form-control" placeholder="{% translate 'User name' %}" required aria-describedby="id_username_helptext" id="id_username" value="{{ username }}">
+            {% endif %}
             <div class="form-text">
                 {% translate 'Required field. No more than 150 characters. Only letters, numbers and symbols @/./+/-/_.' %}
             </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_password">{% translate 'Password' %}</label>
-            <input type="password" name="password" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password' %}" required aria-describedby="id_password_helptext" id="id_password">
+            {% if form.errors.password %}
+                <input type="password" name="password" autocomplete="new-password" class="form-control is-invalid" placeholder="{% translate 'Password' %}" aria-invalid="true" aria-describedby="id_password_helptext" id="id_password">
+                <div class="invalid-feedback">{{ form.errors.password.0 }}</div>
+            {% else %}
+                <input type="password" name="password" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password' %}" aria-describedby="id_password_helptext" id="id_password">
+            {% endif %}
             <div class="form-text">
                 <ul>
                     <li>{% translate 'Your password must contain at least 3 characters.' %}</li>
@@ -34,11 +44,11 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="id_password2">{% translate 'Password Confirmation' %}</label>
-            {% if err %}
+            {% if form.errors.password2 %}
                 <input type="password" name="password2" autocomplete="new-password" class="form-control is-invalid" placeholder="{% translate 'Password Confirmation' %}" aria-invalid="true" aria-describedby="id_password2_helptext" id="id_password2">
-                <div class="invalid-feedback">{{ err }}</div>
+                <div class="invalid-feedback">{{ form.errors.password2.0 }}</div>
             {% else %}
-                <input type="password" name="password2" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password Confirmation' %}" required aria-describedby="id_password2_helptext" id="id_password2">
+                <input type="password" name="password2" autocomplete="new-password" class="form-control" placeholder="{% translate 'Password Confirmation' %}" aria-describedby="id_password2_helptext" id="id_password2">
             {% endif %}
             <div class="form-text">
                 {% translate 'Please enter the password again to confirm.' %}
