--- a/task_manager/templates/list_tasks.html
+++ b/task_manager/templates/list_tasks.html
@@ -42,8 +42,8 @@
     <td>{{ task.id }}</td>
     <td><a href="/tasks/{{ task.id }}/">{{ task.name }}</a></td>
     <td>{{ task.status.name }}</td>
-    <td>{{ task.author }}</td>
-    <td>{{ task.executor }}</td>
+    <td>{{ task.author.get_full_name }}</td>
+    <td>{{ task.executor.get_full_name }}</td>
     <td>{{ task.created_at|date:"d.m.Y H:i" }}</td>
     <td class="d-flex flex-column">
       <a href="{% url 'update_task' task.id %}" class="d-inline-block">{% translate "Update"%}</a>
