--- a/task_manager/templates/page_task.html
+++ b/task_manager/templates/page_task.html
@@ -16,10 +16,10 @@
         <hr>
         <div class="container">
           <div class="row p-1">
-            <div class="col">{% translate 'Author' %}</div><div class="col">{{ task.author }}</div>
+            <div class="col">{% translate 'Author' %}</div><div class="col">{{ task.author.get_full_name }}</div>
           </div>
           <div class="row p-1">
-            <div class="col">{% translate 'Executor' %}</div><div class="col">{{ task.executor }}</div>
+            <div class="col">{% translate 'Executor' %}</div><div class="col">{{ task.executor.get_full_name }}</div>
           </div>
           <div class="row p-1">
             <div class="col">{% translate 'Status' %}</div><div class="col">{{ task.status }}</div>
