--- a/task_manager/templates/list_tasks.html
+++ b/task_manager/templates/list_tasks.html
@@ -5,12 +5,7 @@
 
 
 {% block content %}
-  <h1 class="my-4">
-    
-    {% translate "Tasks" %}
-
-
-  </h1>
+  <h1 class="my-4">{% translate "Tasks" %}</h1>
   
 <a class="btn btn-primary mb-3" href="/tasks/create/" role="button">{% translate "Create task" %}</a>
 
