fix translate errors templates

--- a/task_manager/templates/errors/404.html
+++ b/task_manager/templates/errors/404.html
@@ -5,5 +5,5 @@
 
 {% block content %}
     <h1 class="my-4">404</h1>    
-    <h2>К сожалению, запрашиваемый ресурс не существует</h1>
+    <h2>{% translate 'Sorry, the resource you requested does not exist.' %}</h1>
 {% endblock %}
