--- a/task_manager/templates/errors/500.html
+++ b/task_manager/templates/errors/500.html
@@ -5,6 +5,6 @@
 
 {% block content %}
     <h1 class="my-4">500</h1>    
-    <h2>Что-то пошло не так...</h1>
-    <p>Мы уже разбираемся с этим!</p>
+    <h2>{% translate 'Something went wrong...' %}</h1>
+    <p>{% translate 'We are already working on it!' %}</p>
 {% endblock %}
